[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/pointers.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minimap.gd" type="Script" id=2]

[node name="Minimap" type="MarginContainer"]
margin_right = 661.0
margin_bottom = 241.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 661.0
margin_bottom = 241.0
color = Color( 0.631373, 0.631373, 0.631373, 0.686275 )

[node name="GoodPlane1" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 4

[node name="GoodPlane2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 4

[node name="BadPlane" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 5

[node name="BadPlane2" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 5

[node name="BadPlane3" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 5
